Fixed module loading from classpath